# fatfind-runner

./: .gitignore  CREDITS  INSTALL  Makefile.am  Makefile.filters  Makefile.in  README.md  building-notes.txt  config.h.in  configure.ac  configure.in  fatfind.glade  fatfind.gladep  ltilib.patch
data/filter/: Makefile  Makefile.am  Makefile.in  rgb-filter.txt
data/glade/: Makefile.am  fatfind.glade  fatfind.gladep
po/: .cvsignore  POTFILES.in
src/: Makefile.am  Makefile.in  calibrate.c  calibrate.h  callbacks.c  callbacks.h  circles2.c  circles2.h  circles4.cpp  circles4.h  define.c  define.h  diamond_interface.c  diamond_interface.h  drawutil.c  drawutil.h  fatfind-runner.cpp  fatfind.h  filter.c  image.c  interface.c  interface.h  investigate.c  investigate.cpp  investigate.h  main.c  util.c  util.h
