dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(fatfind, 0.1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="gtk+-2.0 >= 2.8.0 \
	libglade-2.0 >= 2.5.1 \
        opencv >= 0.9.7"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=fatfind
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

# XXX replace mains with real functions
AC_CHECK_LIB([dconfig], [main], ,
        [AC_MSG_ERROR(Missing libdconfig)])
AC_CHECK_LIB([dctl], [dctl_read_char], ,
        [AC_MSG_ERROR(Missing libdctl)])
AC_CHECK_LIB([filter], [main], ,
        [AC_MSG_ERROR(Missing libfilter)])
AC_CHECK_LIB([searchlet], [main], ,
        [AC_MSG_ERROR(Missing libsearchlet)])
AC_CHECK_LIB([odisk], [main], ,
        [AC_MSG_ERROR(Missing libodisk)])
AC_CHECK_LIB([filterexec], [main], ,
        [AC_MSG_ERROR(Missing libfilterexec)])
AC_CHECK_LIB([hstub], [main], ,
        [AC_MSG_ERROR(Missing libhstub)])
AC_CHECK_LIB([log], [main], ,
        [AC_MSG_ERROR(Missing liblog)])
AC_CHECK_LIB([tools], [main], ,
        [AC_MSG_ERROR(Missing libtools)])



dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
data/Makefile
data/glade/Makefile
data/filter/Makefile
])

